# spotify-mcp-server

./: .gitignore  README.md  generate-client.sh  main.py  pyproject.toml
.github/workflows/: ci.yml
spotify_mcp_server/: __main__.py  server.py
