[project]
name = "spotify-mcp-server"
dynamic = ["version"]
description = "Spotify MCP server"
readme = "README.md"
license = "LGPL-3.0-or-later"
authors = [{ name = "NextFire", email = "git@yuru.moe" }]
requires-python = ">=3.10"
dependencies = [
    "mcp",
    "spotify-api",
    "fastapi==0.115.12",
    "uvicorn==0.34.2",
    "yarl==1.20.0",
]

[dependency-groups]
dev = ["pyright==1.1.400", "ruff==0.11.6"]

[tool.uv.sources]
mcp = { git = "https://github.com/NextFire/python-sdk.git", branch = "feat/expose-skip-names_latest-tag" }
spotify-api = { path = "spotify-api" }

[project.scripts]
spotify-mcp-server = "spotify_mcp_server.__main__:main"

[project.urls]
homepage = "https://github.com/NextFire/spotify-mcp-server"

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[tool.pyright]
pythonVersion = "3.10"
reportDeprecated = true
ignore = ["spotify-api"]

[tool.ruff]
exclude = ["spotify-api"]

[tool.ruff.lint]
extend-select = ["I"]
